<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragment.SetNumberPickerFragment">

    <TextView
        android:id="@+id/tv_titleSetNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_number_picker"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/handlee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_textMinNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/min_number"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/handlee"
        app:layout_constraintEnd_toStartOf="@+id/tv_titleSetNumber"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleSetNumber" />

    <TextView
        android:id="@+id/tv_textMaxNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/max_number"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/handlee"
        app:layout_constraintStart_toEndOf="@+id/tv_titleSetNumber"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleSetNumber" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_setMinNumber"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fontFamily="@font/handlee"
        android:hint="@string/_0"
        app:layout_constraintEnd_toEndOf="@+id/tv_textMinNumber"
        app:layout_constraintStart_toStartOf="@+id/tv_textMinNumber"
        app:layout_constraintTop_toBottomOf="@+id/tv_textMinNumber" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_setMaxNumber"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fontFamily="@font/handlee"
        android:hint="@string/_0"
        app:layout_constraintEnd_toEndOf="@+id/tv_textMaxNumber"
        app:layout_constraintStart_toStartOf="@+id/tv_textMaxNumber"
        app:layout_constraintTop_toBottomOf="@+id/tv_textMaxNumber" />

    <Button
        android:id="@+id/bt_setNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="46dp"
        android:text="@string/set_number"
        android:fontFamily="@font/handlee"
        app:layout_constraintEnd_toEndOf="@+id/tv_titleSetNumber"
        app:layout_constraintStart_toStartOf="@+id/tv_titleSetNumber"
        app:layout_constraintTop_toBottomOf="@+id/edt_setMinNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>